<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Module.Home.TweetActivity">

    <include layout="@layout/layout_toolbar_tweet"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tweet_charcount_label"
                android:text="@string/character_count_label"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tweet_charcount"
                android:text="0"
                android:layout_toEndOf="@+id/tweet_charcount_label"
                android:layout_marginStart="@dimen/margin_small"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tweet_charcountlimit"
                android:text="@string/charcount_limit"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_toEndOf="@id/tweet_charcount"
                android:layout_marginStart="@dimen/margin_xsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/tweet_charcount_bar"
                android:layout_below="@+id/tweet_charcount"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressBackgroundTint="@color/colorAccent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/tweet_textfield"
                android:hint="@string/whats_happening"
                android:inputType="textMultiLine|textCapSentences"
                android:backgroundTint="@android:color/transparent"
                android:layout_below="@+id/tweet_charcount_bar"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/tweet_imagelayout"
                android:layout_below="@+id/tweet_textfield"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/tweet_image"
                    app:layout_constraintDimensionRatio="2:1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_below="@+id/tweet_imagelayout"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/tweet_camera"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_photo_camera_24dp"
                    android:adjustViewBounds="true"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/tweet_gallery"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_collections_24dp"
                    android:adjustViewBounds="true"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/tweet_clear"
                    android:backgroundTint="@android:color/darker_gray"
                    android:src="@drawable/ic_clear_48dp"
                    android:adjustViewBounds="true"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>