<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    android:id="@+id/layout_toolbar"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize">

    <TextView
        android:id="@+id/toolbar_title"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.v7.widget.Toolbar>